--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "a canvas lib",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "babel src -d lib"
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,11 @@
   "bugs": {
     "url": "https://github.com/895252509/ZGraphy/issues"
   },
-  "homepage": "https://github.com/895252509/ZGraphy#readme"
+  "homepage": "https://github.com/895252509/ZGraphy#readme",
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0"
+  },
+  "dependencies": {}
 }
