--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0"
+    "babel-preset-env": "^1.7.0",
+    "webpack": "^4.12.1",
+    "webpack-cli": "^3.0.8"
   },
   "dependencies": {}
 }
