--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel src -d lib"
+    "build1": "babel src -d lib",
+    "build2": "babel index.js --out-file index.r.js"
   },
   "repository": {
     "type": "git",
