--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,9 @@
   "compilerOptions": {
     "sourceMap": true,
     "lib":[
-      "es2015",
+      "es2017",
       "dom"
-    ]
+    ],
+    "target": "esnext",
   }
 }
